Use gibber-sockets.h instead of manually including them.

On OpenBSD the lack of sys/socket.h being included here
resulted in: error: field 'address' has incomplete type

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=65977
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>